# live_subtitle_editor

./: .gitignore  DESIGN.md  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
app/: bus.py  config.py  db.py  fracindex.py  hub.py  main.py  ops.py  schema.py
app/api/: rest.py  schemas.py  websocket.py
app/domain/: models.py  operations.py  ordering.py
app/persistence/: database.py  repositories.py  schema.py
app/realtime/: presence.py  pubsub.py  sessions.py
app/services/: collaboration.py
app/static/: index.html
tests/: client.py  test_convergence.py  test_fracindex.py
web/: .dockerignore  .env.local.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/p/[projectId]/: Editor.tsx  SegmentRow.tsx  page.tsx
web/e2e/: collab.spec.ts  global-setup.ts  helpers.ts
web/lib/: api.ts  config.ts  format.ts  types.ts  useCollab.ts
web/scripts/: make-gifs.sh  merge-videos.sh
