[project]
name = "subtitle-editor"
version = "0.1.0"
description = "Real-time collaborative subtitles editor backend (vertical slice)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "asyncpg>=0.30",
    "redis>=5.2",
    "pydantic>=2.9",
    "websockets>=13.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
